<resources>
    <string name="app_name">Text To Speech</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="editText">Enter some text</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="language">CHANGE LANGUAGE</string>
    <string name="curLanguage">Language : </string>
    <string name="curVoice">Voice : </string>
    <string name="voice">CHANGE VOICE</string>
    <string name="title">Text To Speech</string>
    <string name="upload">UPLOAD FILE (.TXT)</string>
    <string name="langActivity">Choose a Language</string>
    <string-array name="languages">
        <item>Italiano</item>
        <item>English</item>
    </string-array>
</resources>
